--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-Hello World
-
-<p>
-<img class="centeredImage" src="Images/Elbert.jpg">
-</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="styles.css" rel="stylesheet" type="text/css"/>
+    </head>
+    <body>
+        <h1>Branden Olson</h1>
+        <h2>Grad student, code monkey, coffee addict.</h2>
+        <p style="text-align:center;">
+            <img src="Images/Elbert.jpg">
+        </p>
+        <h2><a href="bio.html">Bio</a> | <a href="research.html">Research</a> | <a href="BrandenOlsonCV.pdf">CV</a></h2>
+    </body>
+</html>
