Add research page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Branden Olson</h1>
-        <h2>Grad student, code monkey, coffee addict.</h2>
+        <h2>&lt Grad student, code monkey, coffee addict &gt</h2>
         <p style="text-align:center;">
             <img src="Images/Elbert.jpg">
         </p>
