--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1>Branden Olson</h1>
         <h2>&lt Grad student, code monkey, coffee addict &gt</h2>
         <p style="text-align:center;">
-            <img src="Images/Elbert.jpg">
+            <img src="Images/Elbert.jpg" width=50%>
         </p>
         <h2><a href="bio.html">Bio</a> | <a href="research.html">Research</a> | <a href="BrandenOlsonCV.pdf">CV</a></h2>
     </body>
