Added titles, fixed typo

--- a/research.html
+++ b/research.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="styles.css" rel="stylesheet" type="text/css"/>
+        <title>Branden Olson's Homepage</title>
     </head>
 <body>
      <h1>Branden Olson</h1>
@@ -13,7 +14,7 @@
      its application to 
      climatology and meteorology. I develop <a href="http://www.ipcc-data.org/guidelines/pages/weather_generators.html">stochastic weather generators (SWGs)</a>
      and implement them using fast Markov chain Monte Carlo 
-     approachces. 
+     approaches. 
      I've also taken an interest in contemporary Bayesian methods, particularly 
      <a href="https://en.wikipedia.org/wiki/Approximate_Bayesian_computation">approximate Bayesian computation (ABC)</a> techniques for problems with intractable likelihoods.
     <br> <br>
