--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <link href="styles.css" rel="stylesheet" type="text/css"/>
+        <title>Branden Olson's Homepage</title>
     </head>
     <body>
         <h1>Branden Olson</h1>
-        <h2>&lt Grad student, code monkey, coffee addict &gt</h2>
+        <h2>&ltGrad student, code monkey, coffee addict&gt</h2>
         <p style="text-align:center;">
             <img src="Images/Elbert.jpg" width=50%>
         </p>
