Update fonts and colors

--- a/research.html
+++ b/research.html
@@ -8,17 +8,18 @@
      <h1>Branden Olson</h1>
      <h2>Research</h2>
      <p class="bio">
-     Broadly speaking, my skills and interests lie at the interface of statistics and computer science.
+     Broadly speaking, my research interests lie at the interface of statistics and computer science.
      <br> <br>
-     More specifically, my research interests include spatiotemporal statistics and 
+     More specifically, my research involves spatiotemporal statistics and 
      its application to 
-     climatology and meteorology. I develop <a href="http://www.ipcc-data.org/guidelines/pages/weather_generators.html">stochastic weather generators (SWGs)</a>
-     and implement them using fast Markov chain Monte Carlo 
+     climatology and meteorology, such as developing <a href="http://www.ipcc-data.org/guidelines/pages/weather_generators.html">stochastic weather generators (SWGs)</a>
+     and implementing them using fast Markov chain Monte Carlo 
      approaches. 
      I've also taken an interest in contemporary Bayesian methods, particularly 
-     <a href="https://en.wikipedia.org/wiki/Approximate_Bayesian_computation">approximate Bayesian computation (ABC)</a> techniques for problems with intractable likelihoods.
+     <a href="https://en.wikipedia.org/wiki/Approximate_Bayesian_computation">approximate Bayesian computation (ABC)</a> techniques for problems with unknown or intractable likelihoods.
     <br> <br>
-    In the past I have also worked on problems in dynamical systems, such as investigating the effect of inhibitory neurons in <a href="https://en.wikipedia.org/wiki/Artificial_neural_network">artifical neural networks</a>.
+    In the past I have also worked on problems in dynamical systems, 
+    such as investigating the effect of inhibitory neurons in <a href="https://en.wikipedia.org/wiki/Artificial_neural_network">artifical neural networks</a>.
     </p>
     <hr class="bio">
     <h3><a href="index.html">Back</a></h3>
