--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Branden Olson</h1>
-        <h2>&ltGrad student, code monkey, coffee addict&gt</h2>
+        <h2>Grad student, code monkey, coffee addict.</h2>
         <p style="text-align:center;">
             <img src="Images/Elbert.jpg" width=50%>
         </p>
