Adding pic to bio

--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@
      <h1>Branden Olson</h1>
      <h2>Research</h2>
      <p class="bio">
-     Broadly speaking, my research interests lie at the interface of statistics and computer science.
+     Broadly speaking, my interests lie at the interface of statistics and computer science with an emphasis on stochastic modeling.
      <br> <br>
      More specifically, my research involves spatiotemporal statistics and 
      its application to 
@@ -20,8 +20,11 @@
     <br> <br>
     In the past I have also worked on problems in dynamical systems, 
     such as investigating the effect of inhibitory neurons in <a href="https://en.wikipedia.org/wiki/Artificial_neural_network">artifical neural networks</a>.
+    <br> <br>
+    Other fields of interest include statistical machine learning, mathematical finance, and data visualization.
     </p>
     <hr class="bio">
-    <h3><a href="index.html">Back</a></h3>
+    <h3><a href="index.html">Home</a> |
+        <a href="bio.html">Bio</a> | <a href="research.html">Research</a> | <a href="BrandenOlsonCV.pdf">CV</a></h3>
 </body>
 </html>
