--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Branden Olson</h1>
         <h2>Grad student, code monkey, coffee addict.</h2>
         <p style="text-align:center;">
-            <img src="Images/Elbert.jpg" width=50%>
+            <img src="Images/Elbert.jpg" width=50% title="My favorite 14er so far (I've only hiked one)">
         </p>
         <h2><a href="bio.html">Bio</a> | <a href="research.html">Research</a> | <a href="BrandenOlsonCV.pdf">CV</a></h2>
     </body>
