Complete rework of style

--- a/index.html
+++ b/index.html
@@ -5,11 +5,62 @@
         <title>Branden Olson's Homepage</title>
     </head>
     <body>
-        <h1>Branden Olson</h1>
-        <h2>Grad student, code monkey, coffee addict.</h2>
-        <p style="text-align:center;">
-            <img src="Images/Elbert.jpg" width=50% title="My favorite 14er so far (I've only hiked one)">
-        </p>
-        <h2><a href="bio.html">Bio</a> | <a href="research.html">Research</a> | <a href="BrandenOlsonCV.pdf">CV</a></h2>
+        <div id="page">
+            <div id="panel">
+                <table>
+                    <tr>
+                        <td>
+                            <img src="Images/Boulder.jpg" width=250px id="image" align="right">
+                        </td>
+                        <td>
+                            <font size="5" face="Geneva, Arial, Helvetica, san-serif">
+                                Branden Olson</font> <br><br>
+                            <font size="3" face="Geneva, Arial, Helvetica, san-serif">
+                            Research Associate<br>
+                            Department of Statistics<br>
+                            University of Washington<br>
+                            Seattle, WA
+                            <br><br>
+                            Office: PDL A-314<br>
+                            Phone: 970.390.6129<br>
+                            Email: 
+                            <font face="Monaco">
+                            branden.olson@gmail.com
+                            <br><br>
+                            </font>
+                            </font>
+                        </td>
+                    </tr>
+                </table>
+                <br>
+                <table align="center">
+                    <tr>
+                        <td>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="index.html">Home</a> |<br>
+                        </td>
+                        <td>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="bio.html">Bio</a> |<br>
+                        </td>
+                        <td>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="research.html">Research</a> |<br>
+                        </td>
+                        <td>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="BrandenOlsonCV.pdf">CV</a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div id="maincontent">
+                <p>
+                My name is Branden. I like statistics, snowboarding, and strong coffee.
+                </p>
+                <p>
+                Click on the links to the right to learn more about my background and research interests!
+            </div>
+        </div>
     </body>
 </html>
