--- a/research.html
+++ b/research.html
@@ -5,9 +5,57 @@
         <title>Branden Olson's Homepage</title>
     </head>
 <body>
-     <h1>Branden Olson</h1>
-     <h2>Research</h2>
-     <p class="bio">
+        <div id="page">
+            <div id="panel">
+                <table>
+                    <tr>
+                        <td>
+                            <img src="Images/Boulder.jpg" width=250px id="image" align="right">
+                        </td>
+                        <td>
+                            <font size="5" face="Geneva, Arial, Helvetica, san-serif">
+                                Branden Olson</font> <br><br>
+                            <font size="3" face="Geneva, Arial, Helvetica, san-serif">
+                            Research Associate<br>
+                            Department of Statistics<br>
+                            University of Washington<br>
+                            Seattle, WA
+                            <br><br>
+                            Office: PDL A-314<br>
+                            Phone: 970.390.6129<br>
+                            Email: 
+                            <font face="Monaco">
+                            branden.olson@gmail.com
+                            <br><br>
+                            </font>
+                            </font>
+                        </td>
+                    </tr>
+                </table>
+                <br>
+                <table align="center">
+                    <tr>
+                        <td>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="index.html">Home</a> |<br>
+                        </td>
+                        <td>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="bio.html">Bio</a> |<br>
+                        </td>
+                        <td>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="research.html">Research</a> |<br>
+                        </td>
+                        <td>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="BrandenOlsonCV.pdf">CV</a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div id="maincontent">
+                <p>
      Broadly speaking, my interests lie at the interface of statistics and computer science with an emphasis on stochastic modeling.
      <br> <br>
      More specifically, my research involves spatiotemporal statistics and 
@@ -20,11 +68,8 @@
     <br> <br>
     In the past I have also worked on problems in dynamical systems, 
     such as investigating the effect of inhibitory neurons in <a href="https://en.wikipedia.org/wiki/Artificial_neural_network">artifical neural networks</a>.
-    <br> <br>
-    Other fields of interest include statistical machine learning, mathematical finance, and data visualization.
     </p>
-    <hr class="bio">
-    <h3><a href="index.html">Home</a> |
-        <a href="bio.html">Bio</a> | <a href="research.html">Research</a> | <a href="BrandenOlsonCV.pdf">CV</a></h3>
+            </div>
+        </div>
 </body>
 </html>
