Updated color scheme

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                             <img src="Images/Boulder.jpg" width=230px id="image" align="right">
                         </td>
                         <td>
-                            <font size="5" face="Geneva, Arial, Helvetica, san-serif">
+                            <font size="5" face="Geneva, Arial, Helvetica, san-serif" color="saddlebrown">
                                 Branden Olson</font> <br><br>
                             <font size="3" face="Geneva, Arial, Helvetica, san-serif">
                             Research Associate<br>
@@ -25,7 +25,7 @@
                             Phone: 970.390.6129<br>
                             Email: 
                             <font face="Monaco">
-                            branden.olson@gmail.com
+                            brando6@uw.edu
                             <br><br>
                             </font>
                             </font>
@@ -56,10 +56,10 @@
             </div>
             <div id="maincontent">
                 <p>
-                My name is Branden. I like statistics, snowboarding, and strong coffee.
-                </p>
-                <p>
-                Click on the links to the right to learn more about my background and research interests!
+                My name is Branden.<br>
+                I like statistics, snowboarding, and strong coffee.
+                <br><br>
+                Click on the links to the left to learn more!
             </div>
         </div>
     </body>
