--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
             </div>
             <div id="maincontent">
                 <p>
-                My name is Branden.<br>
-                I like statistics, snowboarding, and strong coffee.
+                Welcome!
                 <br><br>
-                Click on the links to the left to learn more!
+                I am a PhD student in statistics who enjoys
+                snowboarding and strong coffee.
+                <br><br>
+                Click on the links to the left to learn more about my background and research interests.
             </div>
         </div>
     </body>
