--- a/research.html
+++ b/research.html
@@ -58,7 +58,7 @@
                 <p>
      Broadly speaking, my interests lie at the interface of statistics and computer science with an emphasis on stochastic modeling.
      <br> <br>
-     More specifically, my research involves spatiotemporal statistics and 
+     Presently, my research involves spatiotemporal statistics and 
      its application to 
      climatology and meteorology, such as developing <a href="http://www.ipcc-data.org/guidelines/pages/weather_generators.html">stochastic weather generators (SWGs)</a>
      and implementing them using fast Markov chain Monte Carlo 
