More wording updates..

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p>
                 Welcome!
                 <br><br>
-                I am a PhD student in statistics who enjoys
+                I am a Ph.D. student and research associate in statistics who enjoys
                 snowboarding and strong coffee.
                 <br><br>
                 Click on the links to the left to learn more about my background and research interests.
