--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 Welcome!
                 <br><br>
                 I am a Ph.D. student and research associate in statistics who enjoys
-                snowboarding and strong coffee.
+                <a href="Images/BeaverCreek.jpg">snowboarding</a> and 
+                <a href="Images/Seattle.png">strong coffee</a>.
                 <br><br>
                 Click on the links to the left to learn more about my background and research interests.
             </div>
