Add headers to pages, include internship experience in bio

--- a/research.html
+++ b/research.html
@@ -55,6 +55,7 @@
                 </table>
             </div>
             <div id="maincontent">
+                <h2>Research</h2>
                 <p>
      Broadly speaking, my interests lie at the interface of statistics and computer science with an emphasis on stochastic modeling.
      <br> <br>
