--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <br><br>
                 I am a Ph.D. student and research associate in statistics who enjoys
                 <a href="Images/BeaverCreek.jpg">snowboarding</a> and 
-                <a href="Images/Seattle.png">strong coffee</a>.
+                strong coffee.
                 <br><br>
                 Click on the links to the left to learn more about my background and research interests.
             </div>
