--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     </script>
     <script>
         $(function(){
-            $("#panel").load("sidebar.html");
+            $("#sidebar").load("sidebar.html");
         });
     </script>
     </head>
     <body>
-        <div id="panel"></div>
+        <div id="sidebar"></div>
+        <div id="maincontent">
+              <p>
+              Welcome!
+              <br><br>
+              I am a Ph.D. student and research associate in statistics who enjoys
+              <a href="Images/BeaverCreek.jpg">snowboarding</a> and 
+              strong coffee.
+              <br><br>
+              Click on the links to the left to learn more about my background and research interests.
+        </div>
     </body>
 </html>
