Fixing spacing issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
     </head>
     <body>
-        <div id="sidebar"></div>
+        <div id="panel"><div id="sidebar"></div></div>
         <div id="maincontent">
               <p>
               Welcome!
