Abstracting panel to its own file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </script>
     </head>
     <body>
+        <div id="page">
         <div id="panel"><div id="sidebar"></div></div>
         <div id="maincontent">
               <p>
@@ -22,6 +23,7 @@
               strong coffee.
               <br><br>
               Click on the links to the left to learn more about my background and research interests.
+        </div>
         </div>
     </body>
 </html>
