--- a/sidebar.html
+++ b/sidebar.html
@@ -1,3 +1,4 @@
+<div id="panel">
                 <table>
                     <tr>
                         <td>
@@ -44,3 +45,4 @@
                         </td>
                     </tr>
                 </table>
+</div>
