--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <div id="page">
         <div id="panel"><div id="sidebar"></div></div>
         <div id="maincontent">
+              <h2>Welcome!</h2>
               <p>
-              Welcome!
-              <br><br>
               I am a Ph.D. student and research associate in statistics who enjoys
               <a href="Images/BeaverCreek.jpg">snowboarding</a> and 
               strong coffee.
