--- a/sidebar.html
+++ b/sidebar.html
@@ -2,7 +2,7 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="Images/Boulder.jpg" width=210px id="image" align="right">
+                            <img src="Images/Lake.jpg" width=310px id="image" align="right">
                         </td>
                         <td>
                             <font size="5" face="Geneva, Arial, Helvetica, san-serif">
