Make img clickable

--- a/sidebar.html
+++ b/sidebar.html
@@ -2,7 +2,7 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="Images/Lake.jpg" id="image" align="right">
+                            <a href="Images/Lake.jpg"><img src="Images/Lake.jpg" id="image" align="right"></a>
                             <script>
 $(document).ready(function(){
     $("img").attr("width", $(window).width()/4);
