Tidying up the whitespace

--- a/sidebar.html
+++ b/sidebar.html
@@ -4,15 +4,15 @@
                         <td>
                             <a href="Images/Lake.jpg"><img src="Images/Lake.jpg" id="image" align="right"></a>
                             <script>
-$(document).ready(function(){
-    $("img").attr("width", $(window).width()/4);
-});
+                                $(document).ready(function(){
+                                    $("img").attr("width", $(window).width()/4);
+                                });
                             </script>
                         </td>
                         <td>
-                            <font size="5" face="Geneva, Arial, Helvetica, san-serif">
+                            <font size="5" face="Geneva, Arial, Helvetica, sans-serif">
                                 Branden Olson</font> <br><br>
-                            <font size="3" face="Geneva, Arial, Helvetica, san-serif">
+                            <font size="3" face="Geneva, Arial, Helvetica, sans-serif">
                             Research Associate<br>
                             Department of Statistics<br>
                             University of Washington<br>
@@ -21,7 +21,7 @@ $(document).ready(function(){
                             Office: PDL A-314<br>
                             Phone: 970.390.6129<br>
                             Email: 
-                            <font face="Monaco">
+                            <font face="Monaco, Andale Mono, Monospace">
                             brando6@uw.edu
                             <br><br>
                             </font>
