--- a/sidebar.html
+++ b/sidebar.html
@@ -24,6 +24,15 @@
                             <font face="Monaco, Andale Mono, Monospace">
                             brando6@uw.edu
                             <br><br>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="index.html">Home</a> <br>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="bio.html">Bio</a> <br>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="research.html">Research</a> <br>
+                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                                <a href="BrandenOlsonCV.pdf">CV</a>
+                        </td>
                             </font>
                             </font>
                         </td>
@@ -32,21 +41,5 @@
                 <br>
                 <table>
                     <tr>
-                        <td>
-                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
-                                <a href="index.html">Home</a> |<br>
-                        </td>
-                        <td>
-                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
-                                <a href="bio.html">Bio</a> |<br>
-                        </td>
-                        <td>
-                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
-                                <a href="research.html">Research</a> |<br>
-                        </td>
-                        <td>
-                            <font size="4" face="Geneva, Arial, Helvetica, san-serif">
-                                <a href="BrandenOlsonCV.pdf">CV</a>
-                        </td>
                     </tr>
                 </table>
