Abstracting links as a footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         $(function(){
             $("#sidebar").load("sidebar.html");
         });
+        $(function(){
+            $("#foot").load("foot.html");
+        });
     </script>
     </head>
     <body>
@@ -23,6 +26,7 @@
               <br><br>
               Click on the links to the left to learn more about my background and research interests.
         </div>
+        <div id="foot"></div>
         </div>
     </body>
 </html>
