--- a/foot.html
+++ b/foot.html
@@ -1,8 +1,8 @@
 <div id="foot">
-    <p>
+    <p align="center">
     <a href="index.html">Home</a> | 
     <a href="bio.html">Bio</a> | 
     <a href="research.html">Research</a> | 
-    <a href="BrandenOlsonCV.pdf">CV</a> | 
+    <a href="BrandenOlsonCV.pdf">CV</a> 
     </p>
 </div>
