Abstracting links to footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         $(function(){
             $("#sidebar").load("sidebar.html");
         });
+        $(function(){
+            $("#foot").load("foot.html");
+        });
     </script>
     </head>
     <body>
@@ -24,5 +27,6 @@
               Click on the links to the left to learn more about my background and research interests.
         </div>
         </div>
+        <div id="foot"></div>
     </body>
 </html>
