--- a/research.html
+++ b/research.html
@@ -9,6 +9,9 @@
             $(function(){
                 $("#sidebar").load("sidebar.html");
             });
+            $(function(){
+                $("#foot").load("foot.html");
+            });
         </script>
     </head>
     <body>
@@ -34,5 +37,6 @@
                 </p>
             </div>
         </div>
+        <div id="foot"></div>
     </body>
 </html>
