--- a/foot.html
+++ b/foot.html
@@ -1,4 +1,4 @@
-<p align="center">
+<p style="text-align: center;">
 <a href="index.html">Home</a> | 
 <a href="bio.html">Bio</a> | 
 <a href="research.html">Research</a> | 
