Add horizontal line, enlarge links

--- a/foot.html
+++ b/foot.html
@@ -1,4 +1,5 @@
-<p style="text-align: center;">
+<hr>
+<h3 style="text-align: center;" class="links">
 <a href="index.html">Home</a> | 
 <a href="bio.html">Bio</a> | 
 <a href="research.html">Research</a> | 
