Say links are below and not to the left since they have moved

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a href="Images/BeaverCreek.jpg">snowboarding</a> and 
               strong coffee.
               <br><br>
-              Click on the links to the left to learn more about my background and research interests.
+              Click on the links below to learn more about my background and research interests.
         </div>
         <div id="foot"></div>
         </div>
