--- a/sidebar.html
+++ b/sidebar.html
@@ -2,7 +2,7 @@
                 <table>
                     <tr>
                         <td>
-                            <a href="Images/Lake.jpg"><img src="Images/BearLake.jpg" id="image" height="auto" align="right"></a>
+                            <a href="Images/Lake.jpg"><img src="Images/Lake.jpg" id="image" height="auto" align="right"></a>
                             <script>
                                 $(document).ready(function(){
                                     $("img").attr("width", $(window).width()/4);
