unlink the photo

--- a/sidebar.html
+++ b/sidebar.html
@@ -2,7 +2,7 @@
                 <table>
                     <tr>
                         <td>
-                            <a href="Images/Alki.png"><img src="Images/Alki.png" id="image" height="auto" align="right"></a>
+                            <img src="Images/Alki.png" id="image" height="auto" align="right">
                             <script>
                                 $(document).ready(function(){
                                     $("img").attr("width", $(window).width()/4);
