Going back to absolute image size rather than relative

--- a/sidebar.html
+++ b/sidebar.html
@@ -2,17 +2,12 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="Images/Alki.png" id="image" height="auto" align="right">
-                            <script>
-                                $(document).ready(function(){
-                                    $("img").attr("width", $(window).width()/4);
-                                });
-                            </script>
+                            <img src="Images/Alki.png" id="image" height=180 align="right">
                         </td>
                         <td>
-                            <font size="5" face="Geneva, Arial, Helvetica, sans-serif">
+                            <font size="4" face="Geneva, Arial, Helvetica, sans-serif">
                                 Branden Olson</font> <br><br>
-                            <font size="3" face="Geneva, Arial, Helvetica, sans-serif">
+                            <font size="2" face="Geneva, Arial, Helvetica, sans-serif">
                             Research Associate<br>
                             Department of Statistics<br>
                             University of Washington<br>
