Adding link to my new homepage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div id="panel"><div id="sidebar"></div></div>
         <div id="maincontent">
               <h2>Welcome!</h2>
-              <p>
+              <p>Update: My homepage has moved! <a href="https://www.stat.washington.edu/~brando6">Click here to visit my current site.<a>
+                      <br><br>
               I am a Ph.D. student and research associate in statistics who enjoys
               <a href="Images/BeaverCreek.jpg">snowboarding</a> and 
               strong coffee.
